Name:                html-kure
Version:             0.1
Synopsis:            HTML rewrite engine, using KURE.
Description:         This package provides a uniform KURE-based API
		     for walking over, and generating, HTML structures.
--Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          andygill@ku.edu
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8
--Source-repository head
--  type:     git
--  location: https://github.com/ku-fpg/diagrams-canvas.git

Library
  Exposed-modules:     Text.HTML.KURE
  Build-depends:       base >= 4.6,
                       kure >= 2.6.13,
                       hxt >= 9.3.1.1

